<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_green"
        tools:context="com.example.android.mathquiz.FinalActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/recap"
    android:textColor="@color/colorAccent"
    android:textStyle="bold|italic"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    android:textAlignment="center"/>
    <TextView
        style="@style/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:visibility="visible" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note1"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_answer1"
                style="@style/answer"/>
            <RadioButton
                android:id="@+id/radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_answer2"
                style="@style/answer"/>
            <RadioButton
                android:id="@+id/radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_answer3"
                style="@style/answer"/>
        </RadioGroup>
        <TextView
            android:id="@+id/text_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        style="@style/question"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note1"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2_answer1"
            style="@style/answer"/>
        <RadioButton
            android:id="@+id/radio_button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2_answer2"
            style="@style/answer"/>
        <RadioButton
            android:id="@+id/radio_button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2_answer3"
            style="@style/answer"/>
    </RadioGroup>
        <TextView
            android:id="@+id/text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            style="@style/question"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note2"/>
        <CheckBox
            android:id="@+id/check_box1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_answer1"
            style="@style/answer"/>
        <CheckBox
            android:id="@+id/check_box2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_answer2"
            style="@style/answer"/>
        <CheckBox
            android:id="@+id/check_box3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_answer3"
            style="@style/answer"/>
        <CheckBox
            android:id="@+id/check_box4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_answer3"
            style="@style/answer"/>
        <TextView
            android:id="@+id/text_view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            style="@style/question"/>
        <EditText
            android:id="@+id/answer4_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_answer"
            android:inputType="number"
            android:layout_margin="@dimen/standard_margin"/>
        <TextView
            android:id="@+id/text_view4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            style="@style/question"/>
        <EditText
            android:id="@+id/answer5_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_answer"
            android:inputType="number"
            android:layout_margin="@dimen/standard_margin"/>
        <TextView
            android:id="@+id/text_view5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results_button"
            android:layout_gravity="center"
            android:onClick="getResults"/>
    </LinearLayout>
</ScrollView>


