<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_green"
    tools:context="com.example.android.mathquiz.Question1Activity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/background"
        android:scaleType="fitXY"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        style="@style/question"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note1"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2_answer1"
            style="@style/answer"/>
        <RadioButton
            android:id="@+id/radio_button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2_answer2"
            style="@style/answer"/>
        <RadioButton
            android:id="@+id/radio_button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2_answer3"
            style="@style/answer"/>
    </RadioGroup>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:onClick="from2ToQuestion1"
            android:text="@string/previous_button" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:onClick="from2tToQuestion3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/next_button" />
    </RelativeLayout>
</LinearLayout>

