<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context="com.example.android.mathquiz.Question1Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/background"
        android:scaleType="fitXY"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3"
        style="@style/question"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note2"/>
        <CheckBox
            android:id="@+id/check_box1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_answer1"
            style="@style/answer"/>
        <CheckBox
            android:id="@+id/check_box2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_answer2"
            style="@style/answer"/>
        <CheckBox
            android:id="@+id/check_box3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_answer3"
            style="@style/answer"/>
    <CheckBox
        android:id="@+id/check_box4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/question3_answer3"
    style="@style/answer"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:onClick="from3ToQuestion2"
            android:text="@string/previous_button" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="from3tToQuestion4"
            android:text="@string/next_button" />
    </RelativeLayout>
    </LinearLayout>
</ScrollView>


