<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context="com.example.android.mathquiz.Question1Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/background"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            style="@style/question"/>
        <EditText
            android:id="@+id/answer_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/type_answer"
            android:inputType="number"
            android:layout_margin="@dimen/standard_margin"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:onClick="from4ToQuestion3"
                android:text="@string/previous_button" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:onClick="from4tToQuestion5"
                android:text="@string/next_button" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>



